<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPalabras"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:onClick="porPalabras"
        android:text="@string/btnPalabras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLetras" />

    <Button
        android:id="@+id/btnLetras"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="244dp"
        android:onClick="eventoSiguiente"
        android:text="@string/btnLetras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="230dp"
        android:layout_height="65dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:onClick="historial"
        android:text="@string/Historial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPalabras" />

</androidx.constraintlayout.widget.ConstraintLayout>