<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_test"
    tools:context=".PorLetras">

    <TextView
        android:id="@+id/campoPalabra"
        android:layout_width="43dp"
        android:layout_height="51dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="272dp"
        android:fontFamily="@font/allerta"
        android:text="T "
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textCampo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoPalabra"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:fontFamily="@font/nunito_black"
        android:hint="@string/EscribeLaLetra"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoPalabra" />

    <TableLayout
        android:layout_width="414dp"
        android:layout_height="122dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:fontFamily="@font/nunito_black"
                android:text="@string/correctas"
                android:textColor="@color/design_default_color_background"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:fontFamily="@font/nunito_black"
                android:text="@string/Incorrectas"
                android:textColor="@color/design_default_color_background"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:fontFamily="@font/nunito_black"
                android:text="@string/Precision"
                android:textColor="@color/design_default_color_background"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtVisualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:fontFamily="@font/nunito_black"
                android:text="@string/CPM"
                android:textColor="@color/design_default_color_background"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/correctos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/cero" />

            <TextView
                android:id="@+id/incorrectos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/cero" />

            <TextView
                android:id="@+id/presicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/cero" />

            <TextView
                android:id="@+id/wpm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/cero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/tvInfoContador"
        android:layout_width="161dp"
        android:layout_height="77dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="110dp"
        android:fontFamily="@font/nunito_black"
        android:text="@string/cronometro"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>